image directory updated

--- a/about.html
+++ b/about.html
@@ -40,12 +40,12 @@
     </div>
 
         <a href="index.html">
-        <img id ="logo" src="Images/greenlogo.png" alt="logo">
+        <img id ="logo" src="images/greenlogo.png" alt="logo">
         </a>
         <h3>Where beauty comes naturally</h3>
     </header>
 
-    <img id="full-screen-background-image" src="Images/phippsflowers.jpg" alt="full screen background image" /> 
+    <img id="full-screen-background-image" src="images/phippsflowers.jpg" alt="full screen background image" /> 
 
     <nav> 
         <a class="selected" href="about.html">About</a> 
@@ -61,7 +61,7 @@
 
     <h4>About Phipps</h4>
 
-    <img src="Images/outside.png" align="left" id="embeddedPhoto">Phipps Conservatory and Botanical Gardens, a great steel and glass Victorian greenhouse, has been inviting visitors to explore the beauty and mysteries of plants since 1893. Set amidst one of Pittsburgh's largest greenspaces, Schenley Park, Phipps Conservatory stands as a cultural and architectural centerpiece of the city's Oakland neighborhood.
+    <img src="images/outside.png" align="left" id="embeddedPhoto">Phipps Conservatory and Botanical Gardens, a great steel and glass Victorian greenhouse, has been inviting visitors to explore the beauty and mysteries of plants since 1893. Set amidst one of Pittsburgh's largest greenspaces, Schenley Park, Phipps Conservatory stands as a cultural and architectural centerpiece of the city's Oakland neighborhood.
 
     <p>In recent decades, Phipps has evolved into one of the region's most vibrant, thriving cultural attractions, bringing fresh perspectives and artists into our historic glasshouse environment. Phipps has also become a strong advocate for advanced green-building practices, sustainable gardening and a new environmental awareness.</p>
 
@@ -77,7 +77,7 @@
 
     <p>Phipps Conservatory and Botanical Gardens is a complex of buildings and grounds set in Schenley Park, Pittsburgh, Pennsylvania, United States (near the Carnegie Museums in Oakland). It is a City of Pittsburgh historic landmark and is listed on the National Register of Historic Places.</p>
 
-    <img src="Images/cropfront.png" align="right" id="cropfront">The gardens were founded in 1893 by steel and real-estate magnate Henry Phipps as a gift to the City of Pittsburgh. Its purpose is to educate and entertain the people of Pittsburgh with formal gardens (Roman, English, etc.) and various species of exotic plants (palm trees, succulents, bonsai, orchids, etc.). Currently, the facilities house elaborate gardens within the thirteen room conservatory itself and on the adjoining grounds. In addition to its primary flora exhibits, the sophisticated glass and metalwork of the Lord and Burnham conservatory offers an interesting example of Victorian greenhouse architecture.</p>
+    <img src="images/cropfront.png" align="right" id="cropfront">The gardens were founded in 1893 by steel and real-estate magnate Henry Phipps as a gift to the City of Pittsburgh. Its purpose is to educate and entertain the people of Pittsburgh with formal gardens (Roman, English, etc.) and various species of exotic plants (palm trees, succulents, bonsai, orchids, etc.). Currently, the facilities house elaborate gardens within the thirteen room conservatory itself and on the adjoining grounds. In addition to its primary flora exhibits, the sophisticated glass and metalwork of the Lord and Burnham conservatory offers an interesting example of Victorian greenhouse architecture.</p>
 
     <p>Phipps is one of the "greenest" facilities in the world. The entrance pavilion of the Phipps Conservatory has silver-level LEED certification. Its Center for Sustainable Landscapes has received a Platinum certification along with fulfilling the Living Building Challenge for net-zero energy, and its greenhouse production facility has received Platinum certification, the first and only greenhouse to be so certified.</p>
 
