--- a/gallery.html
+++ b/gallery.html
@@ -46,12 +46,12 @@
     </div>
 
         <a href="index.html">
-        <img id ="logo" src="Images/greenlogo.png" alt="logo">
+        <img id ="logo" src="images/greenlogo.png" alt="logo">
         </a>
         <h3>Where beauty comes naturally</h3>
     </header>
 
-    <img id="full-screen-background-image" src="Images/phippsflowers.jpg" alt="full screen background image" /> 
+    <img id="full-screen-background-image" src="images/phippsflowers.jpg" alt="full screen background image" /> 
 
     <nav> 
         <a href="about.html">About</a> 
